--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon --inspect",
     "start": "NODE_ENV=production node index",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest"
   },
   "keywords": [
     "javascript",
@@ -26,7 +26,12 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "path-to-regexp": "^6.2.1"
+    "path-to-regexp": "^6.2.1",
+    "uuid": "^8.3.2"
   },
-  "type": "module"
+  "type": "module",
+  "jest": {
+    "testEnvironment": "jest-environment-node",
+    "transform": {}
+  }
 }
